# mcp_gateway

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
brain/: .env.example  .gitignore  README.md  brain.py  brain_server.py  config.py  gist.txt  guardrail_server.py  system_prompt.md  user_prompt.md
chat/: README.md  brain_chat.py
database/: README.md  docker-compose.yml
database/schemas/: jira_tables.sql  servicenow_tables.sql
database/scripts/: SOP.md  setup_database.py  test_database.py  update_jira_schema.py
kong_gw/: README.md  docker-compose.yml  kong.yml  readme.md
shared/: README.md  tool_registry.py  tracing_utils.py
src/: README.md  gist.txt  main.py  main_http_wrapper.py  readme.md
src/api/jira/: jira_http_wrapper.py
src/core/: config.py
src/integrations/jira/: client.py  operations.py  schemas.py  service.py  tools.py
src/metrics/: __init__.py  cli.py  debug_groups.py  debug_prompt.py  debug_relevance.py  intent_checker.py  llm_interface.py  models.py  processor.py  query_processor.py  relevance_checker.py  simple_test.py  sql_validator.py  system_prompt.md  test_e2e.py  test_specific.py
tests/: README.md  jiratest.py  test1.py  test_jira.py
